# NeuroClaw

./: .env.example  .gitignore  Dockerfile  NeuroClaw.md  README.md  pyproject.toml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: brain.glb
frontend/src/: App.css  App.tsx  index.css
frontend/src/hooks/: useArtifact.ts  useVideoSync.ts
frontend/src/lib/: mockArtifact.ts  roiBounds.ts  roiCentroids.ts  safetensors.ts  syncMath.ts  tensorDecode.ts  transcript.ts
frontend/src/types/: artifact.ts
frontend/src/workers/: artifact.worker.ts
scripts/: export_brain.py  interrogate_tribe_checkpoint.py  verify_shapes.py
src/neuroclaw/: __init__.py  cli.py  compliance.py  config.py  inference_wrapper.py
src/neuroclaw/atlas/: __init__.py  cortical_marketing_four.py  dual_pass_rois.py  marketing_four.py  masks.py
src/neuroclaw/extractor/: __init__.py  alignment.py  asr.py  audio.py  text.py  video.py
src/neuroclaw/model/: __init__.py  dual_pass.py  events_builder.py  loader.py  local_asr.py  single_pass.py  tribe_wrapper.py
src/neuroclaw/output/: __init__.py  manifest.py  schema.py  validator.py  writer.py
src/neuroclaw/utils/: __init__.py  adapter.py  determinism.py  git.py  (+1 more)
tests/: conftest.py  test_alignment.py  test_compliance.py  test_cortical_marketing_four.py  test_device.py  test_dual_pass.py  test_dual_pass_rois.py  test_e2e.py  test_events_builder.py  test_local_asr.py  test_marketing_four.py  test_output.py  test_single_pass.py  test_tribe_wrapper.py
tests/fixtures/: README.md
(+19 files in other folders)
